Prevent text wrapping in gallery link

--- a/app/css/listing.css
+++ b/app/css/listing.css
@@ -24,6 +24,7 @@ body.listing #listing {
 #jump-gallery-wrapper {
   display: none;
   padding-left: 20px;
+  white-space: nowrap;
 }
 
 body.has-gallery #jump-gallery-wrapper {
